notes/sandbox2.envoy.yaml
admin:
  address:
    # socket_address: { address: 127.0.0.1, port_value: 9901 }
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      # socket_address: { address: 127.0.0.1, port_value: 10000 }
      socket_address: { address: 0.0.0.0, port_value: 10000 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          # PASS_THROUGH
          # ServerHeaderTransformation
          # codec_type: AUTO
          codec_type: HTTP1
          route_config:
            name: local_route
            # host_rewrite_header: ""
            # append_x_forwarded_host: true
            # request_headers_to_add:
            # - header:
            #     key: "fConnection"
            #     value: "foo"
                # key: "response-code"
                # value: "%RESPONSE_CODE%"
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                # route: { cluster: some_service }
                route:
                  cluster: some_service
                  auto_host_rewrite: true
                # per_filter_config:
                 #  envoy.filters.http.dynamic_forward_proxy:
                 #  auto_host_rewrite_header: X-Host-Port
                  # host_rewrite_header: ""
                  # append_x_forwarded_host: true
# https://www.envoyproxy.io/docs/envoy/latest/api-v3/config/route/v3/route_components.proto#envoy-v3-api-field-config-route-v3-routeaction-auto-host-rewrite
                  # host_rewrite_literal: 10.
                  # auto_host_rewrite
                  # host_rewrite_literal: 204.
                  # use_remote_address: true
                  # xff_num_trusted_hops: 1
                # route: {
                #   cluster: some_service
                # }
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          use_remote_address: true
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            # The following self-signed certificate pair is generated using:
            # $ openssl req -x509 -newkey rsa:2048 -keyout a/front-proxy-key.pem -out  a/front-proxy-crt.pem -days 3650 -nodes -subj '/CN=front-envoy'
            #
            # Instead of feeding it as an inline_string, certificate pair can also be fed to Envoy
            # via filename. Reference: https://envoyproxy.io/docs/envoy/latest/api-v3/config/core/v3/base.proto#config-core-v3-datasource.
            #
            # Or in a dynamic configuration scenario, certificate pair can be fetched remotely via
            # Secret Discovery Service (SDS). Reference: https://envoyproxy.io/docs/envoy/latest/configuration/security/secret.
            - certificate_chain:
                inline_string: |
                  -----BEGIN CERTIFICATE-----
                  MIICqDCCAZACCQCquzpHNpqBcDANBgkqhkiG9w0BAQsFADAWMRQwEgYDVQQDDAtm
[...]
                  m+/R4XnmL4cKQ+5Z
                  -----END CERTIFICATE-----
              private_key:
                inline_string: |
                  -----BEGIN PRIVATE KEY-----
                  MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQC2GdiSpVAFf5aD
[...]
                  q5sGxGrC1RECGB5Zwx2S2ZY=
                  -----END PRIVATE KEY-----

  clusters:
  - name: some_service
    connect_timeout: 0.25s
    # type: LOGICAL_DNS
    # https://www.envoyproxy.io/docs/envoy/latest/intro/arch_overview/upstream/service_discovery#arch-overview-service-discovery-types-strict-dns
    type: STRICT_DNS
    # type: STATIC
    dns_lookup_family: V4_ONLY
    # type: STRICT_DNS
    # https://www.envoyproxy.io/docs/envoy/latest/intro/arch_overview/upstream/service_discovery
    # lb_policy: ROUND_ROBIN
    # lb_policy: RING_HASH
    # typed_extension_protocol_options:
    #   envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
    #     "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
    #     explicit_http_config:
    #       http2_protocol_options:
    #         connection_keepalive:
    #           interval: 30s
    #           timeout: 5s
    load_assignment:
      cluster_name: some_service
      # host_rewrite_literal: 192.168.86.209
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                # address: 192.168.8.44
                address: example.org 
                # address: foo.example.com
                port_value: 80
        - endpoint:
           address:
              socket_address:
                address: example.com 
                # address: foo2.example.com
                port_value: 80
       #  - endpoint:
       #      address:
        #      socket_address:
        #         address:  foo.example.com 
        #         port_value: 80
                # port_value: 443
    # transport_socket:
    #   name: envoy.transport_sockets.tls
    #   typed_config:
    #     "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
